==> pmarches/masterbus-esp32/main/MCP2515.cpp <==
#define MCP2515INTERRUPT_EN
#include "MCP2515.h"
#include "driver/spi_master.h"
#include <esp_log.h>
#include <freertos/task.h>
#include <freertos/semphr.h>
#define TAG __FILE__
#define REG_BFPCTRL                0x0c
#define REG_TXRTSCTRL              0x0d
#define REG_CANSTAT 0xe
#define REG_CANCTRL                0x0f
#define REG_TEC 0x1c
#define REG_REC 0x1d
#define REG_EFLG 0x2d
#define REG_CNF3                   0x28
#define REG_CNF2                   0x29
#define REG_CNF1                   0x2a
#define REG_CANINTE                0x2b
#define REG_CANINTF                0x2c
#define FLAG_RXnIE(n)              (0x01 << n)
#define FLAG_RXnIF(n)              (0x01 << n)
#define FLAG_TXnIF(n)              (0x04 << n)
#define REG_RXFnSIDH(n)            (0x00 + (n * 4))
#define REG_RXFnSIDL(n)            (0x01 + (n * 4))
#define REG_RXFnEID8(n)            (0x02 + (n * 4))
#define REG_RXFnEID0(n)            (0x03 + (n * 4))
#define REG_RXMnSIDH(n)            (0x20 + (n * 0x04))
#define REG_RXMnSIDL(n)            (0x21 + (n * 0x04))
#define REG_RXMnEID8(n)            (0x22 + (n * 0x04))
#define REG_RXMnEID0(n)            (0x23 + (n * 0x04))
#define REG_TXBnCTRL(n)            (0x30 + (n * 0x10))
#define REG_TXBnSIDH(n)            (0x31 + (n * 0x10))
#define REG_TXBnSIDL(n)            (0x32 + (n * 0x10))
#define REG_TXBnEID8(n)            (0x33 + (n * 0x10))
#define REG_TXBnEID0(n)            (0x34 + (n * 0x10))
#define REG_TXBnDLC(n)             (0x35 + (n * 0x10))

int MCP2515Class::begin(long baudRate)
{
	ESP_LOGD(TAG, "Setting baudrate at %ld", baudRate);
  CANControllerClass::begin(baudRate);

  //  spi.begin();
  reset();

  if(setMode(CONFIGURATION_MODE)!=0){
	  ESP_LOGE(TAG, "Failed to go to configuration mode");
	  return 1;
  }

  const struct {
    long clockFrequency;
    long baudRate;
    uint8_t cnf[3];
  } CNF_MAPPER[] = {
    {  (long)8E6, (long)1000E3, { 0x00, 0x80, 0x00 } },
    {  (long)8E6,  (long)500E3, { 0x00, 0x90, 0x02 } },
    {  (long)8E6,  (long)250E3, { 0x00, 0xb1, 0x05 } },
    {  (long)8E6,  (long)200E3, { 0x00, 0xb4, 0x06 } },
    {  (long)8E6,  (long)125E3, { 0x01, 0xb1, 0x05 } },
    {  (long)8E6,  (long)100E3, { 0x01, 0xb4, 0x06 } },
    {  (long)8E6,   (long)80E3, { 0x01, 0xbf, 0x07 } },
    {  (long)8E6,   (long)50E3, { 0x03, 0xb4, 0x06 } },
    {  (long)8E6,   (long)40E3, { 0x03, 0xbf, 0x07 } },
    {  (long)8E6,   (long)20E3, { 0x07, 0xbf, 0x07 } },
    {  (long)8E6,   (long)10E3, { 0x0f, 0xbf, 0x07 } },
    {  (long)8E6,    (long)5E3, { 0x1f, 0xbf, 0x07 } },

    { (long)16E6, (long)1000E3, { 0x00, 0xd0, 0x82 } },
    { (long)16E6,  (long)500E3, { 0x00, 0xf0, 0x86 } },
    { (long)16E6,  (long)250E3, { 0x41, 0xf1, 0x85 } },
    { (long)16E6,  (long)200E3, { 0x01, 0xfa, 0x87 } },
    { (long)16E6,  (long)125E3, { 0x03, 0xf0, 0x86 } },
    { (long)16E6,  (long)100E3, { 0x03, 0xfa, 0x87 } },
    { (long)16E6,   (long)80E3, { 0x03, 0xff, 0x87 } },
    { (long)16E6,   (long)50E3, { 0x07, 0xfa, 0x87 } },
    { (long)16E6,   (long)40E3, { 0x07, 0xff, 0x87 } },
    { (long)16E6,   (long)20E3, { 0x0f, 0xff, 0x87 } },
    { (long)16E6,   (long)10E3, { 0x1f, 0xff, 0x87 } },
    { (long)16E6,    (long)5E3, { 0x3f, 0xff, 0x87 } },
  };

  const uint8_t* cnf = NULL;

  for (unsigned int i = 0; i < (sizeof(CNF_MAPPER) / sizeof(CNF_MAPPER[0])); i++) {
    if (CNF_MAPPER[i].clockFrequency == _clockFrequency && CNF_MAPPER[i].baudRate == baudRate) {
      cnf = CNF_MAPPER[i].cnf;
      break;
    }
  }

  if (cnf == NULL) {
	  ESP_LOGE(TAG, "Failed to configure for clock freq %ld and baudrate %ld", _clockFrequency, baudRate);
    return 1;
  }

  writeRegister(REG_CNF1, cnf[0]);
  writeRegister(REG_CNF2, cnf[1]);
  writeRegister(REG_CNF3, cnf[2]);

  writeRegister(REG_CANINTE, FLAG_RXnIE(1) | FLAG_RXnIE(0));
  writeRegister(REG_BFPCTRL, 0x00);
  writeRegister(REG_TXRTSCTRL, 0x00);
  writeRegister(REG_RXBnCTRL(0), FLAG_RXM1 | FLAG_RXM0);
  writeRegister(REG_RXBnCTRL(1), FLAG_RXM1 | FLAG_RXM0);

  if (setMode(_operationalMode)) {
	  ESP_LOGE(TAG, "Failed to go to mode %x", _operationalMode);
    return 1;
  }

  return 0;
}

void MCP2515Class::reset()
{
	ESP_LOGD(TAG, "Begin reset");
  //spi.beginTransaction(_spiSettings);
	gpio_set_level(_csPin, 0); //Select Slave


  uint8_t spiBytes[]={0xc0};
  spi->transfer(spiBytes, 1);
  gpio_set_level(_csPin, 1);// Release slave
  //spi.endTransaction();

//  delayMicroseconds(10);
  vTaskDelay(5);
	ESP_LOGD(TAG, "Done reset");
}

uint8_t MCP2515Class::readRegister(uint8_t address)
{
  //spi.beginTransaction(_spiSettings);
  gpio_set_level(_csPin, 0); //Select Slave
  uint8_t spiBytes[]={0x03, address, 0x00};
  spi->transfer(spiBytes, 3);
  gpio_set_level(_csPin, 1);// Release slave
  //spi.endTransaction();

  return spiBytes[2];
}

void MCP2515Class::modifyRegister(uint8_t address, uint8_t mask, uint8_t value)
{
  //spi.beginTransaction(_spiSettings);
  gpio_set_level(_csPin, 0); //Select Slave
  uint8_t spiBytes[]={0x05, address, mask, value};
  spi->transfer(spiBytes, 4);
  gpio_set_level(_csPin, 1);// Release slave
  //spi.endTransaction();
}

void MCP2515Class::writeRegister(uint8_t address, uint8_t value)
{
  //spi.beginTransaction(_spiSettings);
  gpio_set_level(_csPin, 0); //Select Slave
  uint8_t spiBytes[]={0x02, address, value};
  spi->transfer(spiBytes, 3);
  gpio_set_level(_csPin, 1);// Release slave
  //spi.endTransaction();
}
